bug 71191: Cannot apply bindings on the root element in a document. r+sr=bzbarsky